--- a/.dockerignore
+++ b/.dockerignore
@@ -1,15 +1,13 @@
-#files which will be removed from the docker file 
- 
-#git
+# Git
 
 .git
 .gitignore
 
-#docker
+# Docker
 
 .docker
 
-#python 
+# Python 
 app/__pycache__/
 app/*/__pycache__/
 app/*/*/__pycache__/
